test/scripts/constructors.cosy

class Dog {
    init(text) {
        this.text = text
        //return nil // early returns are possible
        //print "unreachable"
    }
    say() {
        print this.text + ", bark bark!"
    }
}

var dog = Dog("I'm a dog")
dog.say()

print dog.init("I'm a cat in disguise") // reinitialization is allowed, returning the object
dog.say()

class Sheep {
    // no constructor
    say() {
        print "Bah!"
    }
}
var sheep = Sheep()
sheep.say()
//sheep.init() // error
